<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">ADR MOVIL</string>

    <!-- Menu Botones princial -->
    <string name="Menu_Agrupacion">Agrupacion</string>
    <string name="Menu_RendimientoPlanta">Rendimiento Planta</string>
    <string name="Menu_IngresoJabas">Ingreso de Jabas</string>
    <string name="Menu_RendimientoCampo">Rendimiento Campo</string>
    <string name="Menu_Configuracion">Configuracion</string>
    <string name="Menu_Tareo">Tareo</string>

    <!-- Texto de botones -->
    <string name="BtnConsultar">Consultar</string>
    <string name="btnSincronizar">Sincronizar</string>
    <string name="btnDescargarDatos">Descargar Datos</string>
    <string name="BtnTerminar">Terminar</string>
    <string name="btnIniciarCaptura">INICIAR LA CAPTURA</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="btnFecha">FECHA</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="btnIniciar">Inicio</string>
    <string name="btnFinal">Final</string>
    <string name="btnIngresar">INGRESAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btn_Establecer">ESTABLECER</string>
    <!-- Etiquetas de texto -->

    <string name="lbl_Empresa">Empresa</string>
    <string name="lbl_Sucursal">Sucursal</string>
    <string name="lbl_Linea">Linea</string>
    <string name="lbl_Lado">Lado</string>
    <string name="lbl_Fecha">Fecha</string>

    <string name="lbl_ListaPersonal">Lista de Personal</string>
    <string name="lbl_Mesa">Mesa</string>
    <string name="lbl_Nombres">Nombres</string>
    <string name="lbl_Dni">Dni</string>
    <string name="lbl_Detalle">Detalle</string>
    <string name="lbl_Presentacion">Presentacion</string>
    <string name="lbl_Resumen">Resumen</string>


    <string name="Lbl_SeleccionOpcion">Seleccione una opción</string>
    <string name="lblFecha">Fecha:</string>
    <string name="lblPlanta">Planta de proceso:</string>
    <string name="lblCultivo">Seleccione el cultivo:</string>
    <string name="lblLinea">Seleccione la linea:</string>
    <string name="lblLote">Seleccione el lote:</string>
    <string name="lblCantidad">Ingrese cantidad:</string>
    <string name="lblCampoReproceso">Seleccione si es campo o reproceso:</string>
    <string name="lblListaIngresoJabas">LISTA DE INGRESOS DE JABAS:</string>
    <string name="lblUsuario">USUARIO</string>
    <string name="lblbPassword">CONTRASEÑA</string>
    <string name="lblHoraCero">00:00:00</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
