<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/lytIngresoJabas"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="1">

    <TextView
        android:id="@+id/lblSucursal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPlanta"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:textColor="#000000" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/SpnLinea"
        android:layout_below="@+id/lblLinea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="6"
        android:layout_column="0"
        android:spinnerMode="dialog"
        android:background="@color/background_material_light" />

    <GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="0"
    android:rowCount="7"
    android:columnCount="25">

        <TextView android:id="@+id/edtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFecha"
        android:textStyle="bold"
        android:textSize="12dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_row="2"
        android:layout_column="7" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paradas:"
        android:id="@+id/textView6"
        android:layout_row="2"
        android:layout_column="23" />

        <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/lblFecha"
        android:layout_row="3"
        android:layout_column="7"
        android:enabled="false"
        android:inputType="date"
        android:layout_columnSpan="4"
        android:text="01/01/1900"
        android:textColor="#000000"
        android:focusableInTouchMode="false" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="@string/btnFecha"
            android:id="@+id/btnBuscarFecha"
            android:layout_row="3"
            android:layout_column="20"
            android:src="@android:drawable/ic_menu_my_calendar" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:text="@string/lblHoraCero"
            android:id="@+id/lblIngresos"
            android:layout_row="5"
            android:layout_column="21"
            android:enabled="false"
            android:textColor="#000000" />

        <ImageButton android:id="@+id/btnInicio"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciar"
            android:textSize="14dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="5"
            android:layout_column="10"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hora Ini: "
            android:id="@+id/textView5"
            android:layout_row="5"
            android:layout_column="20" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imbHoraIni"
            android:layout_row="5"
            android:layout_column="23"
            android:src="@android:drawable/presence_away" />

        <ImageButton
        android:id="@+id/btnFinal"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/btnFinal"
        android:textSize="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="6"
        android:layout_column="10"
        android:src="@android:drawable/ic_lock_idle_alarm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hora Fin:"
            android:id="@+id/textView7"
            android:layout_row="6"
            android:layout_column="20" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:text="@string/lblHoraCero"
            android:id="@+id/lblHoraFin"
            android:layout_row="6"
            android:layout_column="21"
            android:enabled="false"
            android:textColor="#000000" />

        <EditText
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtParadas"
            android:layout_below="@+id/lblParadas"
            android:layout_alignParentLeft="true"
            android:layout_row="3"
            android:layout_column="23"
            android:text="0"
            android:maxLength="2" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imbScrollFinal"
            android:layout_row="6"
            android:layout_column="23"
            android:src="@android:drawable/presence_away" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25">

        <TextView
        android:id="@+id/lblLote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLote"
        android:textStyle="bold"
        android:textSize="14dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/lblSucursal"
        android:layout_alignEnd="@+id/lblSucursal"
        android:layout_row="1"
        android:layout_column="0" />

        <TextView
            android:id="@+id/lblConsumidor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLote"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/lblSucursal"
            android:layout_alignEnd="@+id/lblSucursal"
            android:layout_row="1"
            android:layout_column="2"
            android:visibility="invisible" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Es Mix    "
            android:id="@+id/cbxEsMix"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="left"
            android:textSize="12dp" />

        <Spinner
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:id="@+id/SpnLote"
        android:spinnerMode="dialog"
        android:layout_below="@+id/lblLote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="2"
        android:layout_column="0" />

        <Spinner
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/spnConsumidorMix"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/lblLote"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="2"
            android:layout_column="2"
            android:visibility="invisible" />

        <TextView
        android:id="@+id/lblCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCantidad"
        android:textStyle="bold"
        android:textSize="14dp"
        android:layout_below="@+id/SpnLote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="3"
        android:layout_column="0" />

        <TextView
            android:id="@+id/lblCantidad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCantidad"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_below="@+id/SpnLote"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="3"
            android:layout_column="2"
            android:visibility="invisible" />

        <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/txtCantidad"
        android:layout_below="@+id/lblCantidad"
        android:layout_alignParentLeft="true"
        android:layout_row="4"
        android:layout_column="0"
            android:maxLength="3" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtCantidadMix"
            android:layout_below="@+id/lblCantidad"
            android:layout_alignParentLeft="true"
            android:layout_row="4"
            android:layout_column="2"
            android:visibility="invisible" />
    </GridLayout>

    <TextView
    android:id="@+id/lblCampoReproceso"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lblCampoReproceso"
    android:textStyle="bold"
    android:textSize="14dp"
    android:layout_below="@+id/editText"
    android:layout_alignParentLeft="true"
    android:layout_row="11"
    android:layout_column="0" />



<RadioGroup
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/lblCampoReproceso"
    android:layout_alignParentLeft="true"
    android:layout_row="12"
    android:layout_column="0"
    android:orientation="horizontal">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Campo"
        android:id="@+id/rbCampo" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re Proceso"
        android:id="@+id/rbReProceso" />
</RadioGroup>

<GridLayout
    android:layout_width="343dp"
    android:layout_height="49dp"
    android:layout_gravity="center_horizontal">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/btnGuardar"
        android:textSize="20dp"
        android:layout_row="0"
        android:layout_column="3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imbRegresar"
        android:layout_row="0"
        android:layout_column="6"
        android:src="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/btnTerminar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/BtnTerminar"
        android:textSize="20dp"
        android:layout_row="0"
        android:layout_column="7" />

</GridLayout>

</LinearLayout>

