<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal_Login">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout2"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblUsuario"
            android:id="@+id/textView53"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18dp" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsuario"
            android:layout_row="1"
            android:layout_column="0"
            android:inputType="text|textCapCharacters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblbPassword"
            android:id="@+id/textView54"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_below="@+id/gridLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18dp" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_above="@+id/btnCancelar"
            android:layout_alignRight="@+id/btnIngresar"
            android:layout_alignEnd="@+id/btnIngresar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </GridLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/adrlogo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIngresar"
        android:id="@+id/btnIngresar"
        android:textStyle="normal"
        android:textSize="24dp"
        android:layout_above="@+id/imbSincronizarUsuario"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:id="@+id/btnCancelar"
        android:textStyle="normal"
        android:textSize="24dp"
        android:layout_alignTop="@+id/btnIngresar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imbSincronizarUsuario"
        android:src="@android:drawable/presence_online"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
