<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RendArmado_Registro">

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/lblFecha"
        android:layout_row="3"
        android:layout_column="7"
        android:enabled="false"
        android:inputType="date"
        android:layout_columnSpan="4"
        android:text="01/01/1900"
        android:textColor="#000000"
        android:focusableInTouchMode="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="ADR"
        android:id="@+id/lblEmpresa"
        android:layout_alignTop="@+id/lblFecha"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PLANTA DON CARLOS"
        android:id="@+id/lblSucursal"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView80" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="LINEA 1 PUN PDC"
        android:id="@+id/lblLinea"
        android:layout_below="@+id/lblEmpresa"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="LADO A"
        android:id="@+id/lblLado"
        android:layout_alignTop="@+id/lblLinea"
        android:layout_alignStart="@+id/textView82" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_Mesa"
        android:id="@+id/textView37"
        android:layout_below="@+id/textView38"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_Detalle"
        android:id="@+id/textView38"
        android:layout_below="@+id/lblLinea"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="01"
        android:id="@+id/lblMesa"
        android:layout_below="@+id/textView37"
        android:layout_alignEnd="@+id/lblEmpresa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_Dni"
        android:id="@+id/textView80"
        android:layout_below="@+id/textView38"
        android:layout_alignStart="@+id/lblDNI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="40084274"
        android:id="@+id/lblDNI"
        android:layout_below="@+id/textView80"
        android:layout_alignEnd="@+id/lblLinea" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_Nombres"
        android:id="@+id/textView82"
        android:layout_alignTop="@+id/textView80"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="ERICKA NOEMI LABIOS SAYRITUPAC"
        android:id="@+id/lblNombres"
        android:layout_alignTop="@+id/lblDNI"
        android:layout_alignEnd="@+id/lblFecha"
        android:layout_toEndOf="@+id/lblDNI"
        android:layout_alignStart="@+id/textView82"
        android:layout_above="@+id/textView88" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KARDEX"
        android:id="@+id/btnKardex"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imbRegresar"
        android:layout_row="0"
        android:layout_column="6"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btnKardex" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_Presentacion"
        android:id="@+id/textView88"
        android:singleLine="false"
        android:textColor="#000000"
        android:layout_below="@+id/lblMesa"
        android:layout_alignParentStart="true" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dgvPresentacion"
        android:layout_below="@+id/textView88"
        android:layout_alignParentStart="true"
        android:background="@color/common_action_bar_splitter"
        android:layout_above="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_Resumen"
        android:id="@+id/textView21"
        android:singleLine="false"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView3"
        android:background="@color/common_action_bar_splitter"
        android:layout_above="@+id/imbRegresar"
        android:layout_alignEnd="@+id/lblNombres"
        android:layout_below="@+id/textView21" />

</RelativeLayout>
